--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 
-modGroup=com.lambda
-modVersion=1.5.0
+modGroup=dev.oasis
+modVersion=1.6.0
 
 minecraftVersion=1.12.2
 forgeVersion=14.23.5.2860
